Push potential jumplink fix

--- a/d_styles.less
+++ b/d_styles.less
@@ -35,16 +35,7 @@ main {
       width: 24px;
     }
   }
-}
-
-.mobile {
-  .custom-sun-hr {
-    width: 80%;
-    .sun-hr-col {
-      width: 24px;
-    }
-  }
-}
+} 
 
 hr.sun-hr {
   width: 80%;
@@ -63,12 +54,7 @@ hr.sun-hr {
     height: 24px;
     text-align: center;
   }
-}
-
-.mobile {
-  display: none;
-}
- 
+} 
 /* ====================== NAVBAR SELECTORS ====================== */
 .navbar {
   width: 100%; 
@@ -77,30 +63,6 @@ hr.sun-hr {
   box-shadow: 0 9px 20px 0 rgb(0 0 0 / 20%), 0 9px 20px 0 rgb(0 0 0 / 20%);
   .inner-nav {
     padding-left: 30px;
-  }
-  button.mobile {
-    width: 100%;
-    .nav-title { 
-      text-transform: uppercase; 
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 600; 
-      width: 100%;
-      .fa-sun-o {
-        left: 25px;
-        top: 15px; 
-        position: absolute;
-      }
-      .fa-bars {
-        left: 44px;
-        top: 18px;
-        position: absolute;
-        font-size: 12px;
-      }
-      div {
-        transform: translateX(-13px);
-      }
-    } 
   }
   .fa.fa-sun-o {
     transform: translateY(1px);
@@ -112,6 +74,7 @@ hr.sun-hr {
     box-shadow: none;
   } 
   .navbar-nav {
+    margin: 0 auto;
     li {
       padding: 0 15px;
     }
